fix z-index in funnel editor.

--- a/assets/css/admin/funnel-editor.css
+++ b/assets/css/admin/funnel-editor.css
@@ -1,5 +1,5 @@
 body .select2-container{
-    z-index: 99999999 !important;
+    z-index: auto !important;
 }
 
 /* NEW STUFF */
